--- a/bubble-wrap.yaml
+++ b/bubble-wrap.yaml
@@ -3759,20 +3759,7 @@ layers:
                     text-blend-order:
                         priority: 2
                         visible: global.text_visible_admin
-                        text_source: global.ux_language_text_source
-                        # NOTE: there is a bug on feature order for country boundary names
-                        # text_source: |
-                        #     function() {
-                        #         if( feature['name:right'] && feature['name:left'] ) {
-                        #             if( feature['name:right'].includes(' ') || feature['name:left'].includes(' ') ) {
-                        #                 return feature['name'];
-                        #             } else {
-                        #                 return feature['name:left'] + '\n' + feature['name:right'];
-                        #             }
-                        #         } else {
-                        #             return feature['name'];
-                        #         }
-                        #     }
+                        text_source: global.ux_language_text_source_boundary_lines
                         text_wrap: 100px
                         font:
                             family: Varela
@@ -3824,25 +3811,6 @@ layers:
                             fill: [0.4,0.4,0.4]
                             # stroke: { color: global.text_stroke, width: 4 }
                             transform: uppercase
-
-                        # repeat_group: region_boundary_label
-                        # #repeat_distance: [[8,90px],[10,40px],[13,30px]]
-                        # placement: midpoint
-                        # # placement_min_length_ratio:
-                        # #     - [8, 0.1]
-                        # #     - [9, 0.25]
-                        # #     - [10, 0.25]
-                        # #     - [11, 0.15]
-                        # #     - [12, 1]
-                        # #     - [13, 1.50]
-                        # #     - [14, 2.0]
-                        # # cull_from_tile: true
-                        # text:
-                        #     offset: [0px, -0.5px]
-                        #     repeat_distance: 200px
-                        #     anchor: center
-
-
         city_walls:
             filter: { kind: city_wall }
             draw:
@@ -3875,6 +3843,7 @@ layers:
                 text:
                     text_source: global.ux_language_text_source
                     visible: false    # labels are enabled by each layer below
+                    buffer: 3px
                     font:
                         family: Varela
                         # weight: 500
@@ -3883,6 +3852,7 @@ layers:
             text-blend-order:
                 text_source: global.ux_language_text_source
                 visible: false    # labels are enabled by each layer below
+                buffer: 3px
                 font:
                     family: Varela
                     fill: global.text_fill
@@ -4052,19 +4022,12 @@ layers:
                     text:
                         visible: global.text_visible_populated_places
                         interactive: true
-                        #buffer: 3px
-                        # debug testing
-                        #collide: false
                         font:
                             size: [[5,9px],[8,10px],[12,11px]]
                 text-blend-order:
                     visible: global.text_visible_populated_places
                     buffer: 8px
                     interactive: true
-                    # NOTE: text doesn't seem to support buffer (only points?)
-                    # buffer: 3px
-                    # debug testing
-                    #collide: false
                     font:
                         size: [[5,9px],[8,10px],[12,11px]]
 
@@ -4483,6 +4446,7 @@ layers:
                 text-blend-order:
                     visible: false
                     priority: 29
+                    buffer: 8px
                     text_wrap: 10
                     max_lines: 2
                     font:
@@ -4509,7 +4473,6 @@ layers:
                     #kind_tile_rank: { max: 8 }
                 draw:
                     text-blend-order:
-                        buffer: 7px
                         visible: global.text_visible_neighbourhoods_e
                         font:
                             size: 10px
@@ -4522,7 +4485,6 @@ layers:
                     kind_tile_rank: { max: 8 }
                 draw:
                     text-blend-order:
-                        buffer: 4px
                         visible: global.text_visible_neighbourhoods_e
                         font:
                             size: 11px
