--- a/bubble-wrap.yaml
+++ b/bubble-wrap.yaml
@@ -3838,6 +3838,8 @@ layers:
 
     places:
         data: { source: mapzen, layer: places }
+        filter:
+            name: true
         draw:
             icons:
                 text:
@@ -3846,7 +3848,6 @@ layers:
                     buffer: 3px
                     font:
                         family: Varela
-                        # weight: 500
                         fill: global.text_fill
             # NOTE: This is a hack for localities because of an icon & text bug, see note below
             text-blend-order:
@@ -3860,8 +3861,7 @@ layers:
 
         country:
             filter:
-                name: true
-                kind: [country]
+                kind: country
                 $zoom: { min: 2, max: 9 }
             draw:
                 text-blend-order:
@@ -3939,7 +3939,6 @@ layers:
         region:
             filter:
                 kind: region
-                name: true
                 $zoom: { min: 4, max: 9 }
             draw:
                 text-blend-order:
@@ -4008,7 +4007,8 @@ layers:
                                     #fill: blue  #debug
 
         populated-places:
-            filter: { kind: locality }
+            filter:
+                kind: locality
             draw:
                 icons:
                     visible: global.icon_visible_populated_places
@@ -4438,9 +4438,11 @@ layers:
                             priority: 27
         neighborhood:
             filter:
-                name: true
-                kind: [macrohood, neighbourhood, borough]
-                $zoom: { min: 11 }
+                kind:
+                    - macrohood
+                    - neighbourhood
+                    - borough
+                $zoom: { min: 10 }
                 is_landuse_aoi: false
             draw:
                 text-blend-order:
